--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .padding{
@@ -50,6 +51,7 @@
 
 
 .margin-list{
+    margin-top: 20px;
 margin-bottom: 15px;
 }
 
@@ -66,6 +68,7 @@ margin-bottom: 15px;
 .input{
     position: sticky;
     bottom: 10px;
+    /* margin-bottom: 120px; */
     width: 60%;
 }
 .padding-2{
